Fix z-index problem with json editor and tx details panel

--- a/contract.css
+++ b/contract.css
@@ -31,6 +31,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
+    z-index: 100;
 }
 .advanced {
     background-color: white;
